objects/Behavior_Incident__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <description>Additional information that Adult on Duty or any other Adult involved will enter related to an incident</description>
        <inlineHelpText>Additional information that Adult on Duty or any other Adult involved will enter related to an incident</inlineHelpText>
        <label>Additional Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Addl_Educational_Time_Lost__c</fullName>
        <label>Additional Instructional Time Lost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adult_On_Duty_Email__c</fullName>
        <label>Adult On Duty Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Adult_on_Duty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The adult interacting with the student at the time or immediately after the incident. If no adult was interacting, then the adult primarily responsible for the student at the time of the incident.</inlineHelpText>
        <label>Adult on Duty</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Behavior</relationshipLabel>
        <relationshipName>Behavior_Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternative_Seating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternative Seating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Behavior_Category_For_Reporting__c</fullName>
        <label>Behavior Category For Reporting</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Behavior_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Respecting Community</fullName>
                </value>
                <value>
                    <fullName>Respecting Others</fullName>
                </value>
                <value>
                    <fullName>Respecting Self</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Behavior_Category_Input__c</fullName>
        <label>Behavior Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-compliant / Not Participating / Not Prepared</fullName>
                </value>
                <value>
                    <fullName>Not In Class or With Group / Truancy</fullName>
                </value>
                <value>
                    <fullName>Misusing Materials / Damaging Property</fullName>
                </value>
                <value>
                    <fullName>Inappropriate Physical Contact / Unsafe Behavior</fullName>
                </value>
                <value>
                    <fullName>Lying / Cheating / Stealing</fullName>
                </value>
                <value>
                    <fullName>Disruptive / Disrespectful</fullName>
                </value>
                <value>
                    <fullName>Bullying / Threatening / Planning Harm</fullName>
                </value>
                <value>
                    <fullName>Fighting</fullName>
                </value>
                <value>
                    <fullName>Having / Using Potential or Real Weapon</fullName>
                </value>
                <value>
                    <fullName>Drugs / Alcohol</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Positive Behaviors</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Behavior_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Behavior Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Behavior_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Behavior External ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behavior_Incident_Type_Read_Only__c</fullName>
        <formula>Selected_Behavior_Incident_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Behavior Incident Type Read Only</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behavior_Tier__c</fullName>
        <label>Behavior Tier</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Behavior_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
                <value>
                    <fullName>Tier 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Behavior_Type__c</fullName>
        <label>Behavior Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Behavior_Category_Input__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>T1 - Noncompliance with an approved dress code</fullName>
                </value>
                <value>
                    <fullName>T1 - Attending class without required class materials or assigned work</fullName>
                </value>
                <value>
                    <fullName>T1 - Off-task behaviors that demonstrate disengagement from classroom learning</fullName>
                </value>
                <value>
                    <fullName>T1 - Refusal to comply w/ instr. / class / school rules w/o arguing, talking back, or walking away</fullName>
                </value>
                <value>
                    <fullName>T2 - Refusal to comply w/ instr. or rules &amp; arguing, talking back, or walking away</fullName>
                </value>
                <value>
                    <fullName>T1 - Unexcused tardiness for class or school</fullName>
                </value>
                <value>
                    <fullName>T2 - Unauthorized presence in hallway during class time</fullName>
                </value>
                <value>
                    <fullName>T2 - Leaving classroom or group without permission</fullName>
                </value>
                <value>
                    <fullName>T2 - Unexcused absence from class</fullName>
                </value>
                <value>
                    <fullName>T2 - Unexcused absence from school</fullName>
                </value>
                <value>
                    <fullName>T2 - Unauthorized use of portable electronic devices during school hours</fullName>
                </value>
                <value>
                    <fullName>T2 - Intentional misuse of school equipment/supplies/facilities</fullName>
                </value>
                <value>
                    <fullName>T2 - Using computer/office equipment without permission</fullName>
                </value>
                <value>
                    <fullName>T3 - Throwing objects that may cause injury or damage property</fullName>
                </value>
                <value>
                    <fullName>T4 - Causing serious disruption/damage to school&apos;s computer system, electronic files, or network</fullName>
                </value>
                <value>
                    <fullName>T4 - Intentional vandalism or destruction of property under $500</fullName>
                </value>
                <value>
                    <fullName>T4 - Intentional vandalism or destruction of property over $500</fullName>
                </value>
                <value>
                    <fullName>T3 - Engaging in behavior that demonstrates gang/neighborhood crew affiliation (displaying clothing or gestures associated with gangs)</fullName>
                </value>
                <value>
                    <fullName>T4 - Retaliation for reporting harassment and sexual harassment</fullName>
                </value>
                <value>
                    <fullName>T1 - Any behavior not specifically enumerated in any other tier that is disrespectful or causes minor disruption to the academic environment but does not involved damage to school property or harm to self or others</fullName>
                </value>
                <value>
                    <fullName>T2 - Any behavior not specifically enumerated in any other tier that causes disruption to the academic environment, involves damage to school property, or may cause minor harm to self or others</fullName>
                </value>
                <value>
                    <fullName>T3 - Any behavior not specifically enumerated in any other tier that causes significant disruption to the academic environment or causes harm to self or others</fullName>
                </value>
                <value>
                    <fullName>T4 - Any behavior not specifically enumerated in any other tier that causes disruption to the school operation, destroys school property, or causes significant harm to self or others</fullName>
                </value>
                <value>
                    <fullName>T2 - Documented pattern of persistent Tier 1 behavior</fullName>
                </value>
                <value>
                    <fullName>T3 - Documented pattern of persistent Tier 2 behavior</fullName>
                </value>
                <value>
                    <fullName>T4 - Documented pattern of persistent Tier 3 behavior</fullName>
                </value>
                <value>
                    <fullName>T5 - Documented pattern of persistent Tier 4 behavior</fullName>
                </value>
                <value>
                    <fullName>T5 - Possession of a weapon</fullName>
                </value>
                <value>
                    <fullName>T5 - Use, threatened use, or transfer of any weapon</fullName>
                </value>
                <value>
                    <fullName>T5 - Possession of fireworks or explosives</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buddy_Classroom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buddy Classroom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Context_Location__c</fullName>
        <label>Context Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Hallway</fullName>
                </value>
                <value>
                    <fullName>Stairwell</fullName>
                </value>
                <value>
                    <fullName>Bathroom</fullName>
                </value>
                <value>
                    <fullName>Cafeteria</fullName>
                </value>
                <value>
                    <fullName>Gym</fullName>
                </value>
                <value>
                    <fullName>Playground</fullName>
                </value>
                <value>
                    <fullName>Sidewalk/Street</fullName>
                </value>
                <value>
                    <fullName>Park</fullName>
                </value>
                <value>
                    <fullName>Fieldwork</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lobby</fullName>
                </value>
                <value>
                    <fullName>Specialist Room</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Context_Time__c</fullName>
        <inlineHelpText>Time at which the incident occurred.</inlineHelpText>
        <label>Context-Time</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Context_Location__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Before School</fullName>
                </value>
                <value>
                    <fullName>After School</fullName>
                </value>
                <value>
                    <fullName>Arrival</fullName>
                </value>
                <value>
                    <fullName>Class-Lesson/Meeting</fullName>
                </value>
                <value>
                    <fullName>Class-Indep/Group Work</fullName>
                </value>
                <value>
                    <fullName>Class-Transition</fullName>
                </value>
                <value>
                    <fullName>Class-Other</fullName>
                </value>
                <value>
                    <fullName>Room/Hall Transition</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Recess</fullName>
                </value>
                <value>
                    <fullName>Dismissal</fullName>
                </value>
                <value>
                    <fullName>Evening Event</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Transition In Room</fullName>
                </value>
                <value>
                    <fullName>Transition In Hall/Stairs</fullName>
                </value>
                <value>
                    <fullName>Transition In/Out Building</fullName>
                </value>
                <value>
                    <fullName>Pull Out</fullName>
                </value>
                <value>
                    <fullName>After Hours Event</fullName>
                </value>
                <value>
                    <fullName>Community Circle/All School Meeting</fullName>
                </value>
                <value>
                    <fullName>Fieldwork</fullName>
                </value>
                <value>
                    <fullName>Special Class</fullName>
                </value>
                <value>
                    <fullName>Special Block</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_this_incident_occur_during_EDP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did this incident occur during EDP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incident_Description__c</fullName>
        <label>Incident Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Identifier__c</fullName>
        <label>Incident Identifier</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Points__c</fullName>
        <description>Points / Weighting if manually entered via Quick Hit.</description>
        <label>Incident Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incident_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Awaiting Add&apos;l Info</fullName>
                </value>
                <value>
                    <fullName>Awaiting Admin Decision</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Time__c</fullName>
        <label>Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Title__c</fullName>
        <inlineHelpText>Enter the subject of the incident. (Example: Student running in hallway)</inlineHelpText>
        <label>Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                    <default>true</default>
                    <label>Negative</label>
                </value>
                <value>
                    <fullName>Quick Hit</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Weighting__c</fullName>
        <formula>IF ( $RecordType.Name = &apos;Quick Hit&apos;,  Incident_Points__c,  Selected_Behavior_Incident_Type__r.Corresponding_Value__c)</formula>
        <label>Incident Weighting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loss_Of_Privilege__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loss Of Privilege</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marked_For_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marked For Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Incident_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Incident Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Adult_Involved_1_Email__c</fullName>
        <label>Other Adult Involved 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Adult_Involved_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>An adult who saw the incident, interacted with the student after the incident, or knows something about the incident.</inlineHelpText>
        <label>Other Adult Involved1</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Behavior (Other Adult Involved1)</relationshipLabel>
        <relationshipName>Behavior_Incidents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Adult_Involved_2_Email__c</fullName>
        <label>Other Adult Involved 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Adult_Involved_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>An adult who saw the incident, interacted with the student after the incident, or knows something about the incident.</inlineHelpText>
        <label>Other Adult Involved2</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Behavior (Other Adult Involved2)</relationshipLabel>
        <relationshipName>Behavior_Incidents2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Notes__c</fullName>
        <label>Other Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practice_desired_behavior__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Practice Desired Behavior</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preserve__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, this behavior incident will be permanently stored for the students involved in this incident.</inlineHelpText>
        <label>Keep Permanently?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Info_3rdParty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Info From Adult Involved2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Info_Adult1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Info From Adult Involved1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Info_Adult2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Info From Adult Involved2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Info_AoD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Info From Adult On Duty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Info_KW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Info From Adult Involved1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restitution_Community_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restitution / Community Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_Behavior_Category__c</fullName>
        <label>Selected Behavior Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Behavior_Incident_Type_Formula__c</fullName>
        <formula>Selected_Behavior_Incident_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected Behavior Incident Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Behavior_Incident_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Behavior Incident Type</label>
        <referenceTo>Picklist_Value__c</referenceTo>
        <relationshipLabel>Behavior</relationshipLabel>
        <relationshipName>Behavior</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Show_In_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, the Behavior Title and Date will appear in the student and parent portal.</inlineHelpText>
        <label>Show In Portal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student_Involved_Full_Name__c</fullName>
        <label>Student Involved Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Witness__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A student who witnessed the incident.</inlineHelpText>
        <label>Student Witness</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipName>Behavior_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Take_A_Break__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Take-A-Break</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verbal_Redirection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verbal Redirection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verbal_or_written_apology__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verbal Or Written Apology</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weapon_Type__c</fullName>
        <label>Weapon Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Airguns (BB or Pellet)</fullName>
                </value>
                <value>
                    <fullName>Biological Agent</fullName>
                </value>
                <value>
                    <fullName>Bomb</fullName>
                </value>
                <value>
                    <fullName>Chemical Agent</fullName>
                </value>
                <value>
                    <fullName>Handguns (Include Zip Guns And Pistols)</fullName>
                </value>
                <value>
                    <fullName>Rifle Or Shotgun</fullName>
                </value>
                <value>
                    <fullName>Other Firearms (Not Handguns, Rifles or Shotgun)</fullName>
                </value>
                <value>
                    <fullName>Knife (Blade Longer Than 2 Inches)</fullName>
                </value>
                <value>
                    <fullName>Other Weapon</fullName>
                </value>
                <value>
                    <fullName>Unknown Weapon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Behavior</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Incident_Title__c</columns>
        <columns>Incident_Date__c</columns>
        <columns>Student_Involved_Full_Name__c</columns>
        <columns>Context_Location__c</columns>
        <columns>Context_Time__c</columns>
        <columns>Incident_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Behavior_Incidents</fullName>
        <columns>NAME</columns>
        <columns>Student_Involved_Full_Name__c</columns>
        <columns>Incident_Date__c</columns>
        <columns>Context_Location__c</columns>
        <columns>Incident_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Behavior Incidents</label>
    </listViews>
    <nameField>
        <displayFormat>BI-{000000}</displayFormat>
        <label>Behavior Incident ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behavior</pluralLabel>
    <recordTypes>
        <fullName>Negative</fullName>
        <active>true</active>
        <label>Negative</label>
    </recordTypes>
    <recordTypes>
        <fullName>Neutral</fullName>
        <active>true</active>
        <label>Neutral</label>
    </recordTypes>
    <recordTypes>
        <fullName>Positive</fullName>
        <active>true</active>
        <label>Positive</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quick_Hit</fullName>
        <active>true</active>
        <label>Quick Hit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>