objects/Behavior_Incident__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Incident_Title__c</columns>
    <columns>Incident_Date__c</columns>
    <columns>Student_Involved_Full_Name__c</columns>
    <columns>Context_Location__c</columns>
    <columns>Context_Time__c</columns>
    <columns>Incident_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>