objects/Behavior_Incident__c/listViews/My_Behavior_Incidents.listView-meta.xml
<ListView>
    <fullName>My_Behavior_Incidents</fullName>
    <columns>NAME</columns>
    <columns>Student_Involved_Full_Name__c</columns>
    <columns>Incident_Date__c</columns>
    <columns>Context_Location__c</columns>
    <columns>Incident_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Behavior Incidents</label>
</ListView>